--- a/style.css
+++ b/style.css
@@ -15,3 +15,54 @@
   flex-flow: column;
   align-content: center;
 }
+.flexContainer {
+  max-width: 400px;
+  background-color: lightblue;
+  border: black 2px solid;
+  border-radius: 8px;
+  padding: 6px;
+}
+
+#smallerDiv {
+  max-width: 200px;
+  height: 400px;
+}
+
+h2 {
+  word-wrap: break-word;
+}
+
+#navBar {
+  background-color: #bbb;
+  list-style: none;
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+  gap: 0.6rem;
+  padding-right: 6px;
+  justify-content: end;
+}
+
+@media (width <= 512px) {
+  #heroSection {
+    display: flex;
+    flex-flow: column;
+    gap: 20px;
+  }
+  h2 {
+    background-color: #000;
+    color: white;
+  }
+}
+
+@media (width > 512px) {
+  #heroSection {
+    display: flex;
+    flex-flow: row;
+    gap: 20px;
+  }
+  h2 {
+    background-color: #fff;
+    color: #000;
+  }
+}
