--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@
   --small-color: aqua;
 }
 
+* {
+  text-decoration: none;
+}
+
 .form {
   display: flex;
   flex-flow: column;
@@ -37,6 +41,28 @@
 
 h2 {
   word-wrap: break-word;
+}
+
+#blueSpan {
+  color: blue;
+}
+
+#inline-v-block {
+  border: 6px black solid;
+  border-radius: 6px;
+  background-color: #fff;
+}
+
+.block {
+  background-color: #bbb;
+}
+
+.block a:hover {
+  color: white;
+}
+
+.inline {
+  background-color: #333;
 }
 
 @media (width <= 650px) {
