--- a/style.css
+++ b/style.css
@@ -106,6 +106,7 @@ h2 {
     display: flex;
     flex-flow: column;
     gap: 20px;
+    margin-left: 8px;
   }
   h2 {
     background-color: #000;
